# geomlib

./: .gitmodules  CMakeLists.txt  docker-compose.yml
include/: affine.hpp  curve.hpp
include/affine/: affine_core.hpp
include/curve/: cubic_spline.hpp  curve_concepts.hpp  polyline.hpp  segment.hpp
include/geomlib/: affine.hpp  curve.hpp
include/geomlib/affine/: affine_core.hpp
include/geomlib/curve/: cubic_spline.hpp  curve_concepts.hpp  polyline.hpp  polynomial.hpp  segment.hpp
include/geomlib/io/: binary_utility.hpp  stl.hpp
include/geomlib/nns/: kd_tree.hpp
include/geomlib/surface/: polygon.hpp  polygon_mesh.hpp  surface_concepts.hpp
test/: CMakeLists.txt  affine.cc  curve_common.cc
test/curve/: cubic_spline.cc  polyline.cc  polynomial.cc  segment.cc
test/io/: binary_utility.cc  stl.cc
test/nns/: kd_tree.cc
test/surface/: polygon.cc  polygon_mesh.cc
